[package]
name = "twintopics-s3-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6"
futures-util = "0.3"
http-body = "1.0"
tokio = "1"
tokio-stream = "0.1.15"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
aws-config = "1.5"
aws-sdk-s3 = "1.34"
http-body-util = "0.1"
url = "2"
